# de-zoomcamp-26

./: .gitignore  README.md  checking out modules fro DEZC.sh  checking out modules from DEZC.sh  setup.sh
01-docker-terraform/: README.md
01-docker-terraform/_A_docker-sql/: 02-virtual-environment.md
01-docker-terraform/_B_terraform/: scratchpad.sh
01-docker-terraform/_homework/: 01-homework-pavelgaranin-dezc.md
01-docker-terraform/docker-sql/: 06-ingestion-script.md  08-dockerizing-ingestion.md
01-docker-terraform/homework/: de-zc-homework-01.md  pavelgaranin-de-zc-homework-01.md
01-docker-terraform/pipeline/: Dockerfile  README.md  docker-compose.yaml  google-cloud-test.py  ingest_data.py  ingest_data.py.bak  ingest_data_nyc_green_taxi.py  notebook.ipynb  pipeline.py  pyproject.toml  scratchpad.sh
01-docker-terraform/terraform/: scratchpad.sh
01-docker-terraform/test/: file1.txt
02-workflow-orchestration/: docker-compose.yml  scratchpad.sh
02-workflow-orchestration/_homework/: 02-homework-dezc.md  02-homework-pavelgaranin-dezc.md  homework.md
02-workflow-orchestration/flows/: 06_gcp_kv.yaml  07_gcp_setup.yaml  08_gcp_taxi.yaml  09_gcp_taxi_scheduled.yaml  12_gcp_fhv_scheduled.yaml
03-data-warehouse/: pyproject.toml
03-data-warehouse/_homework/: README.md  dlt_upload_to_gcp.ipynb
04-analytics-engineering/_homework/: README.md
04-analytics-engineering/dbt_taxi_rides_ny/: README.md  dbt_project.yml
05-data-platforms/_homework/: README.md
06-batch/: main.py  pyproject.toml
06-batch/_homework/: README.md  download_data.sh  scratchpad.sh  (+1 more)
(+64 files in other folders)
